fixed waves center alignment

--- a/css/ghpages-materialize.css
+++ b/css/ghpages-materialize.css
@@ -5779,6 +5779,7 @@ ul.tabs li.tab {
   -ms-user-select: none;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
+  vertical-align: middle;
   z-index: 1;
   will-change: opacity, transform;
   -webkit-transition: all 0.3s ease-out;
