--- a/sass/components/_waves.scss
+++ b/sass/components/_waves.scss
@@ -22,7 +22,7 @@
     // white-space: nowrap;
     // outline: 0;
 
-    // vertical-align: middle;
+    vertical-align: middle;
     // cursor: pointer;
     // border: none;
     // outline: none;
